--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-grids": "^23.2.7",
+    "@syncfusion/ej2-react-popups": "^23.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^2.30.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-resizable": "^3.0.5",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.15",
+    "split-pane-react": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.6"
   }
 }
