--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-to-print": "^2.14.15",
     "split-pane-react": "^0.1.3",
     "uiw": "^4.22.3",
