--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@react-pdf/renderer": "^3.1.14",
     "@syncfusion/ej2-grids": "^23.2.7",
     "@syncfusion/ej2-react-popups": "^23.2.4",
@@ -13,17 +14,22 @@
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
+    "framer-motion": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-paginate": "^8.2.0",
     "react-pdf-tailwind": "^2.2.1",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-to-print": "^2.14.15",
+    "react-transition-group": "^4.4.5",
+    "react-use": "^17.5.0",
     "split-pane-react": "^0.1.3",
     "uiw": "^4.22.3",
     "web-vitals": "^2.1.4"
