--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
     "react-pdf-tailwind": "^2.2.1",
     "react-resizable": "^3.0.5",
